--- a/app/src/main/res/layout/activity_pantallaagua.xml
+++ b/app/src/main/res/layout/activity_pantallaagua.xml
@@ -91,10 +91,20 @@
         <Button
             android:layout_width="170dp"
             android:layout_height="50dp"
+            android:backgroundTint="@color/hueso"
+            android:text="Atras"
             android:layout_marginLeft="125dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10sp"
+            android:onClick="pantallaConsejos"
+            android:textColor="@color/black"
+            android:textSize="25sp" />
+        <Button
+            android:layout_width="170dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="125dp"
             android:backgroundTint="@color/hueso"
             android:text="Inicio"
+            android:onClick="pantallaSesionIniciada"
             android:textColor="@color/black"
             android:textSize="25sp" />
 
