--- a/app/src/main/res/layout/activity_pantallahogar.xml
+++ b/app/src/main/res/layout/activity_pantallahogar.xml
@@ -40,7 +40,7 @@
                     android:text="Hogar"
                     android:textColor="@color/black"
                     android:textSize="25sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
@@ -56,16 +56,18 @@
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/hueso"
                 app:cardCornerRadius="15dp">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:text="*Reducción de agua caliente \n *Reducción de residuos \n*Transporte sostenible"
-                    android:textSize="25sp"
                     android:textAlignment="center"
-                    android:layout_gravity="center"/>
+                    android:textSize="25sp" />
 
             </androidx.cardview.widget.CardView>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -81,10 +83,11 @@
                 <ImageView
                     android:layout_width="400dp"
                     android:layout_height="300dp"
-                    android:src="@drawable/imagen_de_whatsapp_2023_10_29_a_las_20_43_52_a73ebde6"/>
+                    android:src="@drawable/imagen_de_whatsapp_2023_10_29_a_las_20_43_52_a73ebde6" />
 
             </androidx.cardview.widget.CardView>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="250dp"
@@ -94,8 +97,19 @@
                 android:layout_width="170dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="125dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10sp"
                 android:backgroundTint="@color/hueso"
+                android:onClick="pantallaConsejos"
+                android:text="Atras"
+                android:textColor="@color/black"
+                android:textSize="25sp" />
+
+            <Button
+                android:layout_width="170dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="125dp"
+                android:backgroundTint="@color/hueso"
+                android:onClick="pantallaSesionIniciada"
                 android:text="Inicio"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
