--- a/app/src/main/res/layout/activity_pantallainfo1.xml
+++ b/app/src/main/res/layout/activity_pantallainfo1.xml
@@ -96,28 +96,45 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="60dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:backgroundTint="@color/hueso"
+                android:text="Atras"
+                android:onClick="pantallaMasinfo"
+                android:textColor="@color/black"
+                android:textSize="25sp" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:backgroundTint="@color/hueso"
+                android:text="Siguiente"
+                android:onClick="pantallaInfo2"
+                android:textColor="@color/black"
+                android:textSize="25sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
             <Button
-                android:layout_width="170dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="125dp"
-                android:layout_marginTop="30dp"
-                android:backgroundTint="@color/hueso"
-                android:text="Atras"
-                android:textColor="@color/black"
-                android:textSize="25sp" />
-            <Button
-                android:layout_width="170dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="125dp"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/hueso"
                 android:text="Inicio"
+                android:onClick="pantallaSesionIniciada"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
-
         </LinearLayout>
 
     </LinearLayout>
