--- a/app/src/main/res/layout/activity_pantallainfo2.xml
+++ b/app/src/main/res/layout/activity_pantallainfo2.xml
@@ -97,28 +97,29 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
 
             <Button
-                android:layout_width="170dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="125dp"
-                android:layout_marginTop="30dp"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
                 android:backgroundTint="@color/hueso"
                 android:text="Atras"
+                android:onClick="pantallaInfo1"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
             <Button
-                android:layout_width="170dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="125dp"
-                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:backgroundTint="@color/hueso"
-                android:text="Inicio"
+                android:text="Siguiente"
+                android:onClick="pantallaInfo3"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
-
         </LinearLayout>
 
     </LinearLayout>
