--- a/app/src/main/res/layout/activity_pantallaregistro1.xml
+++ b/app/src/main/res/layout/activity_pantallaregistro1.xml
@@ -63,16 +63,18 @@
             android:layout_gravity="center"
             android:backgroundTint="#ADCA96"
             android:text="Empezar"
+            android:onClick="pantallaRegistro"
             android:textColor="@color/black"
             android:textSize="25sp" />
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="40sp"
+            android:layout_height="50sp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:backgroundTint="@color/white"
             android:text="¿Ya tienes cuenta?"
+            android:onClick="pantallaPrincipal"
             android:textAlignment="center"
             android:textColor="@color/black" />
 
