--- a/app/src/main/res/layout/activity_pantallaregistro4.xml
+++ b/app/src/main/res/layout/activity_pantallaregistro4.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo_principal2"
-    tools:context=".pantallaregistro2">
+    tools:context="pantallaregistro4">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Registro papel"
+                android:text="Registro plastico"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="25sp"
@@ -229,15 +229,20 @@
         <Button
             android:layout_width="170dp"
             android:layout_height="50dp"
+            android:backgroundTint="@color/hueso"
+            android:text="Atras"
+            android:onClick="pantallaCategoria"
+            android:textColor="@color/black"
+            android:textSize="25sp" />
+        <Button
+            android:layout_width="170dp"
+            android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:backgroundTint="@color/hueso"
+            android:onClick="pantallaSesionIniciada"
             android:text="Inicio"
             android:textColor="@color/black"
             android:textSize="25sp" />
 
     </LinearLayout>
-
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
