--- a/app/src/main/res/layout/activity_pantallaresiduos.xml
+++ b/app/src/main/res/layout/activity_pantallaresiduos.xml
@@ -40,7 +40,7 @@
                     android:text="Residuos"
                     android:textColor="@color/black"
                     android:textSize="25sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
@@ -84,13 +84,40 @@
                     android:layout_width="300dp"
                     android:layout_height="200dp"
                     android:layout_marginLeft="30dp"
-                    android:src="@drawable/imagen_de_whatsapp_2023_10_29_a_las_20_44_05_4049d878"/>
+                    android:src="@drawable/imagen_de_whatsapp_2023_10_29_a_las_20_44_05_4049d878" />
 
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginRight="10sp"
+                android:backgroundTint="@color/hueso"
+                android:text="Atras"
+                android:onClick="pantallaConsejos"
+                android:textColor="@color/black"
+                android:textSize="25sp" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:backgroundTint="@color/hueso"
+                android:text="Siguiente"
+                android:onClick="pantallaResiduos1"
+                android:textColor="@color/black"
+                android:textSize="25sp" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -98,23 +125,14 @@
                 android:layout_width="170dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="125dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="10dp"
                 android:backgroundTint="@color/hueso"
-                android:text="Siguiente"
+                android:onClick="pantallaSesionIniciada"
+                android:text="Inicio"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
-
-            <Button
-            android:layout_width="170dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="125dp"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="@color/hueso"
-            android:text="Inicio"
-            android:textColor="@color/black"
-            android:textSize="25sp" />
-
         </LinearLayout>
+
 
     </LinearLayout>
 
