--- a/app/src/main/res/layout/activity_pantallaresiduos1.xml
+++ b/app/src/main/res/layout/activity_pantallaresiduos1.xml
@@ -84,25 +84,28 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="80dp"
             android:orientation="horizontal">
 
             <Button
-                android:layout_width="170dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginLeft="40sp"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
                 android:backgroundTint="@color/hueso"
                 android:text="Atras"
+                android:layout_marginRight="5dp"
+                android:onClick="pantallaConsejoResiduos"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
             <Button
-                android:layout_width="170dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:backgroundTint="@color/hueso"
-                android:text="Atras"
+                android:text="Siguiente"
+                android:layout_marginLeft="5dp"
+                android:onClick="pantallaResiduos2"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
         </LinearLayout>
@@ -118,6 +121,7 @@
             android:layout_marginTop="10dp"
             android:backgroundTint="@color/hueso"
             android:text="Inicio"
+            android:onClick="pantallaSesionIniciada"
             android:textColor="@color/black"
             android:textSize="25sp" />
         </LinearLayout>
