--- a/app/src/main/res/layout/activity_pantallaresiduos4.xml
+++ b/app/src/main/res/layout/activity_pantallaresiduos4.xml
@@ -85,25 +85,28 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="80dp"
             android:orientation="horizontal">
 
             <Button
-                android:layout_width="170dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginLeft="40sp"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5sp"
                 android:backgroundTint="@color/hueso"
                 android:text="Atras"
+                android:onClick="pantallaResiduos3"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
             <Button
-                android:layout_width="170dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:backgroundTint="@color/hueso"
-                android:text="Atras"
+                android:text="Siguiente"
+                android:layout_marginLeft="5dp"
+                android:onClick="pantallaResiduos5"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
         </LinearLayout>
@@ -119,6 +122,7 @@
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/hueso"
                 android:text="Inicio"
+                android:onClick="pantallaSesionIniciada"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
         </LinearLayout>
