--- a/app/src/main/res/layout/activity_pantallaresiduos6.xml
+++ b/app/src/main/res/layout/activity_pantallaresiduos6.xml
@@ -84,26 +84,28 @@
             </androidx.cardview.widget.CardView>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginTop="80dp"
             android:orientation="vertical">
 
             <Button
-                android:layout_width="170dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="30dp"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:backgroundTint="@color/hueso"
                 android:text="Atras"
+                android:onClick="pantallaResiduos5"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
             <Button
-                android:layout_width="170dp"
-                android:layout_height="50dp"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/hueso"
                 android:text="Inicio"
+                android:onClick="pantallaSesionIniciada"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
         </LinearLayout>
