--- a/app/src/main/res/layout/activity_recomendaciones.xml
+++ b/app/src/main/res/layout/activity_recomendaciones.xml
@@ -151,10 +151,9 @@
                 android:textSize="25sp"
                 android:text="Recomendacion"/>
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
-                android:layout_marginTop="10dp"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <Button
@@ -162,6 +161,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:text="Papel"
+                    android:onClick="pantallaRecomendacionesPapel"
                     android:textColor="@color/black"
                     android:backgroundTint="@color/hueso"/>
                 <Button
@@ -169,12 +169,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:text="Plastico"
+                    android:onClick="pantallaRecomendacionesPlastico"
                     android:textColor="@color/black"
                     android:backgroundTint="@color/hueso"/>
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Vidrio"
+                    android:onClick="pantallaRecomendacionesVidrio"
                     android:textColor="@color/black"
                     android:backgroundTint="@color/hueso"/>
 
@@ -186,6 +188,7 @@
                 android:layout_marginLeft="125dp"
                 android:backgroundTint="@color/hueso"
                 android:text="Inicio"
+                android:onClick="pantallaSesionIniciada"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
 
