--- a/app/src/main/res/layout/activity_recomendaciones1.xml
+++ b/app/src/main/res/layout/activity_recomendaciones1.xml
@@ -128,6 +128,7 @@
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/hueso"
                 android:text="Atras"
+                android:onClick="pantallaRecomendaciones"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
             <Button
@@ -137,6 +138,7 @@
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/hueso"
                 android:text="Inicio"
+                android:onClick="pantallaSesionIniciada"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
 
