--- a/app/src/main/res/layout/activity_recomendaciones3.xml
+++ b/app/src/main/res/layout/activity_recomendaciones3.xml
@@ -28,9 +28,9 @@
                 <ImageView
                     android:layout_width="120dp"
                     android:layout_height="110dp"
-                    android:layout_marginLeft="100dp"
+                    android:layout_marginLeft="90dp"
                     android:layout_marginTop="5dp"
-                    android:src="@drawable/plastico" />
+                    android:src="@drawable/vidrio" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -113,6 +113,7 @@
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/hueso"
                 android:text="Atras"
+                android:onClick="pantallaRecomendaciones"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
             <Button
@@ -122,6 +123,7 @@
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/hueso"
                 android:text="Inicio"
+                android:onClick="pantallaSesionIniciada"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
 
